maas/rack.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: maas-rack
  namespace: kigawa-net-maas
spec:
  selector:
    matchLabels:
      app: maas-rack
  template:
    metadata:
      labels:
        app: maas-rack
    spec:
      # DHCP/TFTPサービスを物理ネットワークに直接提供するためhostNetworkが必須
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      # MAASラックコントローラを実行するノードを指定
      # ノードに kubectl label nodes <node-name> maas.kigawa.net/rack=true でラベル付けしてください
      nodeSelector:
        maas.kigawa.net/rack: "true"
      containers:
        - name: maas-rack
          image: harbor.kigawa.net/library/maas-rack:main-a18cd3ef4fbe3e98faed81b6aee7e26a725e688b
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
