maas/region-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-region-svc
  namespace: kigawa-net-maas
spec:
  selector:
    app: maas-region
  ports:
    - name: api
      port: 5240
      targetPort: 5240
